fix(components): fix sidebar overflow of FlipConsoleLayout

--- a/packages/swirl-components/src/components/flip-console-layout/flip-console-layout.css
+++ b/packages/swirl-components/src/components/flip-console-layout/flip-console-layout.css
@@ -20,7 +20,6 @@
   display: grid;
   overflow-x: hidden;
   overflow-y: auto;
-  width: 100%;
   height: 100%;
   border-right: var(--s-border-width-default) solid var(--s-border-default);
   grid-template-rows: auto 1fr auto;
@@ -32,8 +31,7 @@
 }
 
 .console-layout__header {
-  position: sticky;
-  top: 0;
+  overflow: hidden;
   min-width: 0;
   padding: var(--s-space-20) var(--s-space-24);
   background-color: var(--s-background-default);
@@ -41,6 +39,8 @@
 }
 
 .console-layout__navigation {
+  overflow-x: hidden;
+  overflow-y: auto;
   padding-top: var(--s-space-8);
   padding-bottom: var(--s-space-8);
   background-color: var(--s-background-default);
@@ -48,8 +48,7 @@
 }
 
 .console-layout__user {
-  position: sticky;
-  bottom: 0;
+  overflow: hidden;
   margin-top: var(--s-border-width-default);
   padding: var(--s-space-16) var(--s-space-24) var(--s-space-24);
   border-top: var(--s-border-width-default) solid var(--s-border-default);
